--- a/app/src/main/res/drawable/course_background.xml
+++ b/app/src/main/res/drawable/course_background.xml
@@ -1,13 +1,13 @@
 <!-- res/drawable/course_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/dark_gray" />
+    <solid android:color="@color/black" />
     <corners android:radius="16dp" />
     <stroke
         android:width="2dp"
         android:color="@color/yellow" />
     <padding
-        android:left="8dp"
-        android:right="8dp"
-        android:top="8dp"
-        android:bottom="8dp" />
+        android:left="20dp"
+        android:right="20dp"
+        android:top="20dp"
+        android:bottom="20dp" />
 </shape>
