--- a/app/src/main/res/drawable/rounded_course_background.xml
+++ b/app/src/main/res/drawable/rounded_course_background.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#3AB50D"/> <!-- Background color -->
-    <corners android:radius="16dp"/> <!-- Corner radius -->
+    <solid android:color="#3AB50D"/>
+    <corners android:radius="16dp"/>
 </shape>
+
