--- a/app/src/main/res/layout/activity_learning_dashboard.xml
+++ b/app/src/main/res/layout/activity_learning_dashboard.xml
@@ -31,7 +31,7 @@
         android:text="Hello User!"
         android:textColor="@color/yellow"
         android:textSize="18sp"
-        android:textStyle="bold"
+        android:textStyle="light"
         app:layout_constraintStart_toEndOf="@id/profile_picture"
         app:layout_constraintTop_toTopOf="@id/profile_picture"/>
 
@@ -140,7 +140,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="8dp"
+                    android:padding="10dp"
                     android:background="@drawable/course_background">
 
                     <ImageView
@@ -159,7 +159,7 @@
                         android:text="Constitution"
                         android:textColor="@color/yellow"
                         android:textSize="16sp"
-                        android:textStyle="bold"
+                        android:textStyle=""
                         android:layout_alignParentTop="true"
                         android:layout_alignParentStart="true"
                         android:background="@color/black"
@@ -187,7 +187,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="8dp"
+                    android:padding="10dp"
                     android:background="@drawable/course_background">
 
                     <ImageView
@@ -206,7 +206,7 @@
                         android:text="Computers"
                         android:textColor="@color/yellow"
                         android:textSize="16sp"
-                        android:textStyle="bold"
+                        android:textStyle=""
                         android:layout_alignParentTop="true"
                         android:layout_alignParentStart="true"
                         android:background="@color/black"
